k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: "2401020"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: backend
          image: nexus.imcc.com:8085/my-repository/mern-backend:latest
          ports:
            - containerPort: 5000
