k8s/restaurant_deployment.yaml
# -------------------------------
# Namespace
# -------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: "2401020"

---
# -------------------------------
# Deployment
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-deployment
  namespace: "2401020"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: restaurant-container
          image: 127.0.0.1:30085/2401020/restaurant-reservation:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30

---
# -------------------------------
# Service
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: "2401020"
spec:
  selector:
    app: restaurant
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
# -------------------------------
# Ingress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: "2401020"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: restaurant-reservation.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 80
